# jing-camera

./: .gitattributes  .gitignore  AGENTS.md  gradle.properties  gradlew  gradlew.bat  settings.gradle.kts
.github/workflows/: release.yml
app/: build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/kotlin/com/jing/camera/: MainActivity.kt
app/src/main/kotlin/com/jing/camera/camera/: HdrPipeline.kt  JingCameraController.kt  LivePhotoRecorder.kt  ManualControls.kt  MediaStoreSaver.kt  NativeProcessor.kt  NightPipeline.kt  PortraitProcessor.kt  VideoRecorder.kt
app/src/main/kotlin/com/jing/camera/ui/: CameraScreen.kt
app/src/main/kotlin/com/jing/camera/ui/theme/: Theme.kt
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
app/src/main/res/xml/: file_paths.xml
gradle/: libs.versions.toml
tests/: .gitignore  README.md  conftest.py  pyproject.toml  pytest.ini  requirements.txt  test_app_launch.py  test_flash.py  test_live_photos.py  test_mode_switch.py  test_photo_capture.py  test_pro_mode.py  test_thumbnail.py  test_ui_controls.py  test_video.py  test_zoom.py
